syntax = "proto3";

import "data.proto"

message ShuffleStartRequest {
  map <string, bytes> ranges=1;
}

message ShuffleStartResponse{
}

message ShuffleRequest{
  string ip=1;
  repeated Data data=2;
}

message ShuffleResponse{
}

message ShuffleCompleteRequest{
  string ip=1;
}

message ShuffleCompleteResponse{
}


message MergeSortStartRequest{
}

message MergeSortStartResponse{
}

message MergeSortCompleteRequest{
  string ip = 1;
}

message MergeSortCompleteResponse{ 
}

message RegisterRequest {
  string ip = 1;
}

message RegisterResponse {
  string ip = 1;
  repeated Data samples = 2;
}
